// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`direct set semver string 1`] = `
"android {
    defaultConfig {
        versionCode 2
        versionName \\"1.1.2\\"
    }
}
"
`;

exports[`direct set semver string 2`] = `
Object {
  "version": "1.1.2",
}
`;

exports[`preserve quotes style 1`] = `
"android {
    defaultConfig {
        versionCode 2
        versionName '1.1.0'
    }
}
"
`;

exports[`skip semVer when asked 1`] = `
"android {
    defaultConfig {
        versionCode 2
        versionName \\"1.0.0\\"
    }
}
"
`;

exports[`successfully bump version 1`] = `
"android {
    defaultConfig {
        versionCode 2
        versionName \\"1.1.0\\"
    }
}
"
`;
